--- a/index.html
+++ b/index.html
@@ -297,11 +297,10 @@
       </div>
     </div>
   </div>
-
 </body>
    
-
-<script>
+</head>
+ <script>
         // Three.js Heart Background
         const container = document.getElementById('canvas-container');
         const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
@@ -530,4 +529,6 @@
  
 
 </html>
+   
+   
 
